laborations/lab1/testsuite/good/throw.cc
int main() {
  throw x;
  throw throw x;
  throw throw throw x;
}
