laborations/lab1/testsuite/bad/bad081.cc
int main () {
	(2+3) x;
}
